<resources>
    <string name="app_name">GoGoal</string>
    <string name="app_disclaimer">免责声明：本产品内发布的信息，目的在于传播更多信息，与本终端立场无关。
        本产品不保证该产品(包括但不限于文字、数据及图表)全部或者部分内容的准确性、真实性、完整性、有效性、及时性、
        原创性等。相关信息并无经过本终端证实，不对您构成任何投资建议，据此操作，风险自担。</string>
    <string name="title_message">消息</string>
    <string name="title_chat_person_detial">聊天详情</string>
    <string name="title_chat_person_infos">详细资料</string>
    <string name="title_newfirend">消息</string>
    <string name="title_status">连接中&#8230;</string>
    <string name="title_contacts">金融人脉</string>
    <string name="title_found">投研</string>
    <string name="title_information">资讯</string>
    <string name="title_live">直播</string>
    <string name="title_mine">我的</string>
    <string name="title_group_chat">发起群聊</string>
    <string name="title_add_friend">朋友验证</string>
    <string name="title_add_group">入群申请</string>
    <string name="title_new_friend">新的朋友</string>
    <string name="title_square_collcet">我的群组</string>
    <string name="title_square_contacts">群成员</string>
    <string name="title_my_stock">自选</string>
    <string name="title_mtstock_news">自选股资讯</string>
    <string name="title_stock_news">个股资讯</string>
    <string name="title_edit_my_infomation">编辑个人资料</string>
    <string name="title_choose_address">选择地区</string>
    <string name="title_change_phone_number">更换手机号</string>
    <string name="title_user_information">详细资料</string>
    <string name="title_account_safe">账号与安全</string>
    <string name="phone_num">手机号</string>
    <string name="square_collcet_add">添加</string>
    <string name="square_publish_create">创建</string>
    <string name="title_stock_market">股票行情</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>
    <string name="all_images">全部图片</string>
    <string name="folder_image_count">共%1$d张</string>
    <string name="preview_image_count">%1$s/%2$s</string>
    <string name="select_limit">最多选择%1$s张图片</string>
    <string name="complete">完成</string>
    <string name="select_complete">完成(%1$s/%2$s)</string>
    <string name="preview_count">预览(%1$s)</string>
    <string name="photo_crop">图片裁剪</string>
    <string name="origin">原图</string>
    <string name="origin_size">原图(%1$s)</string>
    <string name="live_together">邀请连麦</string>
    <string name="anchor_introduction">主播介绍</string>
    <string name="invite_timeout_tip">对方长时间未响应，已取消连麦邀请</string>
    <string name="inviting_process_timeout">超时未处理，已经自动拒绝对方的连麦邀请</string>
    <string name="mix_stream_timeout_tip">由于长时间未连麦成功，已自动结束连麦</string>
    <string name="no_inviting_for_response">当前没有连麦邀请</string>
    <string name="close_chat_failed_for_new_chat">当前连麦关闭失败，无法开启新的连麦</string>
    <string name="network_busy">当前网络状况不佳</string>
    <string name="no_network">链接断开</string>
    <string name="video_chatting_finished">连麦结束</string>
    <string name="camera_open_failure_for_live">摄像头开启失败，无法直播</string>
    <string name="error_stop_playing">播放出错，请退出观看！</string>
    <string name="close_video_chatting_failed">关闭连麦失败</string>
    <string name="camera_open_failure_for_chat">摄像头开启失败，无法连麦</string>
    <string name="error_unknown">未知错误</string>
    <string name="show_first_frame">显示第一帧</string>
    <string name="not_allow_repeat_call">已经发送过连麦邀请了，请不要重复发送</string>
    <string name="invite_succeed">发起连麦成功，请等待对方响应</string>
    <string name="invite_failed">发起连麦失败</string>
    <string name="received_calling">收到主播的连麦邀请</string>
    <string name="video_callling_message">是否同意连麦？</string>
    <string name="not_agree">不同意</string>
    <string name="agree">同意</string>
    <string name="title_video_call_response">连麦答复</string>
    <string name="agree_message">对方同意连麦</string>
    <string name="not_agree_message">对方不同意连麦</string>
    <string name="merge_stream_failed">连麦失败</string>
    <string name="close_video_call_title">结束连麦</string>
    <string name="close_video_call_confirm_message">确定要结束连麦？</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="quit">退出</string>
    <string name="close_video_call_notify_message">对方已经终止连麦！</string>
    <string name="video_chatting_timeout">连麦超时</string>
    <string name="close_live_call_title">结束直播</string>
    <string name="close_live_call_confirm_message">确定要结束直播？</string>
    <string name="close_live_failed">结束直播失败</string>
    <string name="live_finished">直播已结束</string>
    <string name="not_link_live">无法进行连麦，请稍后再试或联系客服。</string>
    <string name="sure_is_play">当前网络4G，确认继续播放吗？</string>
    <string name="prompt">提示</string>
    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>
    <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
    <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
    <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>
    <string name="share_clone">关闭</string>
    <string name="share_copy">复制链接</string>
    <string name="share_wx_circle">微信朋友圈</string>
    <string name="share_friend">微信好友</string>
    <string name="share_gogoal">Go-Goal</string>
    <string name="tv_cancle">取消</string>
    <string name="player_edit">和大家说点什么</string>
    <string name="send">发送</string>
    <string name="input">输入聊天内容</string>
    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指 取消发送</string>
    <string name="im_str_delete">删除并退出</string>
    <string name="im_str_square_notice">群公告</string>
    <string name="im_str_square_name">群名称</string>
    <string name="im_str_square_code">群二维码</string>
    <string name="im_str_square_brief">群简介</string>
    <string name="im_str_square_myname">我在本群昵称</string>
    <string name="im_str_clip_hangds">鼓手</string>
    <string name="im_str_no_bother">消息免打扰</string>
    <string name="im_str_save_group">保存到通讯录</string>
    <string name="im_str_look_message">查看聊天内容</string>
    <string name="str_recorder_dialog_recording">手指上滑，取消发送</string>
    <string name="str_recorder_dialog_cancle">@string/str_recorder_want_cancel</string>
    <string name="str_recorder_dialog_2short">录音时间太短</string>
    <string name="str_recorder_dialog_2long">录音时间不能超过1分钟</string>
    <string name="donot_found_wechat">未检测到微信客户端或者版本不被支持</string>
    <string name="action_select">选择操作</string>
    <string name="action_select_picture">选择图片</string>
    <string name="title_error_photo">无法保存照片，请检查SD卡是否挂载</string>
    <string name="title_update_icon_status">正在上传头像中&#8230;</string>
    <string name="title_icon_null">图像不存在，上传失败</string>
    <string name="title_icon_upload_error">图片上传失败&#8230;</string>
    <string name="title_update_success_status">个人信息更新成功&#8230;</string>
    <string name="title_update_fail_status">个人信息更新失败&#8230;</string>
    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="permissions_record_error">录音无法完成初始化,请正确授权。</string>
    <string name="str_request_record_message">请求获取录音权限</string>
    <string name="record_init_error">录音异常，无法完成初始化。</string>
    <string name="nodata_hint">没有相关数据</string>
    <string name="nomoredata_hint">没有更多数据</string>
    <string name="net_erro_hint">数据请求出错</string>
    <string name="str_cancle">取消</string>
    <string name="text_empty">--</string>
    <string name="str_search_man_square">手机号/Go-Goal账号</string>
    <string name="str_title_ok">确定%s</string>
    <string name="str_title_del">删除%s</string>
    <string name="finish_live">完成直播</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_coming_soon">努力开发中&#8230;</string>
    <string name="str_add_friend_remark">你好，我是%s</string>
    <string name="str_group_count">(%d人)</string>
    <string name="str_result">没有找到与%s相关的</string>
    <string name="str_market">行情</string>
    <string name="str_search_hint">请输入股票代码/名称/拼音</string>
    <string name="str_add_my_stock">添加自选股</string>
    <string name="str_refresh_ok">数据更新成功！</string>
    <string name="str_account_exit">该手机号已注册，请直接登录</string>
    <string name="str_title_back">返回</string>
    <string name="str_login_in">登录</string>
    <string name="str_login_at_time">登录中&#8230;</string>
    <string name="str_login_register">注册</string>
    <string name="str_login_sure">确  定</string>
    <string name="str_login_confirm">信息验证</string>
    <string name="str_rigister_error">注册失败，请稍后重试</string>
    <string name="str_code_confirm">验  证</string>
    <string name="str_correct_code">重置密码</string>
    <string name="str_login_error">登录失败</string>
    <string name="str_login_edit_null">用户名或密码不能为空</string>
    <string name="str_edit_person_info">个人信息</string>
    <string name="str_login_no_net">登录超时</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_login_code_error">账户或密码错误</string>
    <string name="str_setting_name">姓名</string>
    <string name="str_setting_duty">职位</string>
    <string name="str_setting_company">公司</string>
    <string name="newest_live">最新直播</string>
    <string name="great_video">精彩视频</string>
    <string name="str_helper">帮助</string>
    <string name="str_share">分享</string>
    <string name="str_friends_count">%d位联系人</string>
    <string name="str_setting">设置</string>
    <string name="add_friend">加好友</string>
    <string name="social_live_invite">邀约</string>
    <string name="invite_phone">每个邀请码只能使用1次,如果没有邀请码请联系400&#8211;1818&#8211;595</string>
    <string name="str_touyan_setting_tips"><font color="#333333">我的工具 </font>
        <font color="#999999">(按住拖动调整排序)</font></string>
    <string name="str_get_contacts_erro">取通讯录失败，原因可能有：\n
        1.Go-Goal没有权限访问你的通讯录。请先退出Go-Goal，在系统设置或手机安全软件中，授权Go-Goal访问通讯录。\n
        2. 手机通讯录中没有可用的联系人资料。</string>
    <string name="no_related_video">暂无相关视频</string>
    <string name="loading_error">加载失败...</string>
    <string name="again_load">重新加载</string>
    <string name="im_phone_num">手机通讯录</string>
    <string name="im_message_send_fail">对方开启了好友验证，您还不是他（她）的好友。请发起朋友验证请求，
        对方验证通过后，才可以聊天。发送朋友验证</string>
    <string name="title_change_phone">更换手机号</string>
    <string name="play_introduction_null">主播很懒，什么都没有留下。</string>
    <string name="main_introduction">主营介绍</string>
    <string name="product_class">产品分类</string>
    <string name="product_name">产品名称</string>
    <string name="scope_business">经营范围</string>
    <string name="main_business_structure">主营业务构成</string>
    <string name="linear_layout_manager">android.support.v7.widget.LinearLayoutManager</string>
    <string name="grid_layout_manager">android.support.v7.widget.GridLayoutManager</string>
    <string name="change_cover">更换封面</string>
    <string name="write_title_for_live">给直播写个标题吧</string>
    <string name="start_live">开始直播</string>
    <string name="live_means_consent">直播即代表你同意</string>
    <string name="go_goal_live_protocol">《Go-Goal直播协议》</string>
    <string name="live_need_contact">该直播目前仅限由朝阳永续定向邀约发起，如果您有直播合作意向请联系曹小姐：021-68889706-8127</string>
    <string name="leave_message_for_friend">给朋友留言</string>
    <string name="send_for">发送给:</string>
    <string name="single_season_revenue_sharing">单季节营业收入占比</string>
    <string name="one_quarter">一季度</string>
    <string name="two_quarter">二季度</string>
    <string name="three_quarter">三季度</string>
    <string name="four_quarter">四季度</string>
    <string name="default_rehabilitation_choose">默认复权选择</string>
    <string name="authority_rb1">不复权</string>
    <string name="authority_rb2">前复权</string>
    <string name="authority_rb3">后复权</string>
    <string name="default_style_selection">默认K线样式选择</string>
    <string name="kline_b1">实心阳线</string>
    <string name="kline_b2">空心阳线</string>
    <string name="serial_number">序号</string>
    <string name="industry_owned">所属行业</string>
    <string name="code">代码</string>
    <string name="industry_name">名称</string>
</resources>