<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/layout_dialog_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/tv_dialog_share_gogoal"
            style="@style/ShareDialogButton"
            android:drawableTop="@mipmap/icon_share_gogoal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="GoGoal" />

        <TextView
            android:id="@+id/tv_dialog_share_wx"
            style="@style/ShareDialogButton"
            android:drawableTop="@mipmap/icon_share_friend"
            android:text="@string/share_friend" />

        <TextView
            android:id="@+id/tv_dialog_share_wx_circle"
            style="@style/ShareDialogButton"
            android:drawableTop="@mipmap/icon_share_wx_circle"
            android:text="@string/share_wx_circle" />

        <TextView
            android:id="@+id/tv_dialog_share_copy"
            style="@style/ShareDialogButton"
            android:drawableTop="@mipmap/icon_share_copy"
            android:gravity="center"
            android:text="@string/share_copy" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_dialog_cancle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/shape_line_top"
        android:text="@string/share_clone"
        android:layout_below="@+id/layout_dialog_function"
        android:textColor="@color/textColor_333333"
        android:textSize="16sp" />
</RelativeLayout>