<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_share_message_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/send_for"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <include layout="@layout/item_contacts" />

    <TextView
        android:id="@+id/tv_dialog_share_msg_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#F7F7F7"
        android:ellipsize="end"
        android:maxLines="2"
        android:padding="10dp"
        android:text="@string/text_empty" />

    <ImageView
        android:id="@+id/iv_dialog_share_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:maxHeight="150dp"
        android:minHeight="55dp"
        android:minWidth="55dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/cache_live_list"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_dialog_share_msg_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dialog_invite_auth"
        android:hint="@string/leave_message_for_friend"
        android:maxLines="3"
        android:padding="7dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_dialog_share_msg_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/btn_dialog_share_msg_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:text="@string/send"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>