<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/create_live_bg"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="cn.gogoal.im.activity.CreateLiveActivity">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:scaleType="fitXY"
        android:src="@mipmap/icon_live_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_create_bg"
        android:orientation="horizontal"
        android:padding="18dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.hply.roundimage.roundImage.RoundedImageView
                android:id="@+id/imgLive"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/change_cover"
                android:textColor="@android:color/white"
                android:textSize="13dp" />

        </FrameLayout>

        <EditText
            android:id="@+id/editLive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/write_title_for_live"
            android:maxLines="4"
            android:textColor="@android:color/white"
            android:textColorHint="@color/textColor_999999"
            android:textSize="17dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStartLive"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="123dp"
        android:background="@drawable/create_btn_bg"
        android:text="@string/start_live"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/live_means_consent"
            android:textColor="@android:color/white"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_goal_live_protocol"
            android:textColor="@color/live_together"
            android:textSize="12dp" />

    </LinearLayout>

</LinearLayout>
