<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group_kline"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/group_authority"
    android:orientation="vertical">

    <TextView
        android:background="@color/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="14dp"
        android:paddingTop="15dp"
        android:text="@string/default_style_selection"
        android:textColor="@color/textColor_999999"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider_d9d9d9" />

    <RadioButton
        android:id="@+id/kline_b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:button="@null"
        android:drawableRight="@drawable/item_radiobutton_selector"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="26dp"
        android:paddingTop="14dp"
        android:text="@string/kline_b1"
        android:textColor="@color/textColor_333333"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider_d9d9d9" />

    <RadioButton
        android:id="@+id/kline_b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:button="@null"
        android:drawableRight="@drawable/item_radiobutton_selector"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="26dp"
        android:paddingTop="14dp"
        android:text="@string/kline_b2"
        android:textColor="@color/textColor_333333"
        android:textSize="17sp" />

</RadioGroup>