<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radiu_top"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="25dp"
        android:text="@string/live_need_contact"
        android:textColor="@color/textColor_333333"
        android:textSize="16sp" />

    <View
        android:id="@+id/flag_view_btm"
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:layout_below="@+id/tv_dialog_message"
        android:background="@color/textColor_666666" />

    <View
        android:id="@+id/flag_view_middle"
        android:layout_width="0.5px"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_cancle"
        android:layout_alignTop="@+id/btn_cancle"
        android:layout_below="@+id/flag_view_btm"
        android:layout_centerHorizontal="true"
        android:background="@color/textColor_666666" />

    <TextView
        android:id="@+id/btn_cancle"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/flag_view_btm"
        android:layout_toStartOf="@id/flag_view_middle"
        android:text="@string/cancel"
        android:background="@drawable/shape_dialog_normal_alert_btn_cancle"
        android:textColor="@color/textColor_333333"/>

    <TextView
        android:id="@+id/btn_ok"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/flag_view_btm"
        android:layout_toEndOf="@id/flag_view_middle"
        android:text="@string/sure"
        android:background="@drawable/shape_dialog_normal_alert_btn_ok"
        android:textColor="#2782d7" />

</RelativeLayout>